<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cl_calculator"
    app:layout_constraintTop_toBottomOf="@+id/app_toolbar"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryBackground"
        android:elevation="10dp"
        android:paddingStart="0dp"
        android:paddingEnd="10dp"
        android:textAlignment="textEnd"
        android:textColor="@color/colorSecondaryText"
        android:textSize="56sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_simple"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/txt_result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="visible">

        <Button
            android:id="@+id/btn_C"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="clickBtn"
            android:text="@string/str_btn_c"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_7"
            app:layout_constraintEnd_toStartOf="@+id/btn_sign"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="clickBtn"
            android:text="@string/str_btn_sign"
            android:textSize="36sp"
            app:layout_constraintEnd_toStartOf="@+id/btn_percent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_C"
            app:layout_constraintTop_toTopOf="@+id/btn_C" />

        <Button
            android:id="@+id/btn_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="clickBtn"
            android:text="@string/str_btn_percent"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_sign"
            app:layout_constraintTop_toTopOf="@+id/btn_sign" />

        <Button
            android:id="@+id/btn_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="clickBtn"
            android:text="@string/str_btn_7"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_4"
            app:layout_constraintEnd_toStartOf="@+id/btn_8"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_C" />

        <Button
            android:id="@+id/btn_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="clickBtn"
            android:text="@string/str_btn_8"
            android:textSize="36sp"
            app:layout_constraintEnd_toStartOf="@+id/btn_9"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_7"
            app:layout_constraintTop_toTopOf="@+id/btn_7" />


        <Button
            android:id="@+id/btn_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="clickBtn"
            android:text="@string/str_btn_9"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_8"
            app:layout_constraintTop_toTopOf="@+id/btn_8" />


        <Button
            android:id="@+id/btn_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="clickBtn"
            android:text="@string/str_btn_4"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_1"
            app:layout_constraintEnd_toStartOf="@+id/btn_5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_7" />

        <Button
            android:id="@+id/btn_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="clickBtn"
            android:text="@string/str_btn_5"
            android:textSize="36sp"
            app:layout_constraintEnd_toStartOf="@+id/btn_6"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_4"
            app:layout_constraintTop_toTopOf="@+id/btn_4" />

        <Button
            android:id="@+id/btn_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="clickBtn"
            android:text="@string/str_btn_6"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_5"
            app:layout_constraintTop_toTopOf="@+id/btn_5" />

        <Button
            android:id="@+id/btn_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="clickBtn"
            android:text="@string/str_btn_1"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_0"
            app:layout_constraintEnd_toStartOf="@+id/btn_2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_4" />

        <Button
            android:id="@+id/btn_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="clickBtn"
            android:text="@string/str_btn_2"
            android:textSize="36sp"
            app:layout_constraintEnd_toStartOf="@+id/btn_3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_1"
            app:layout_constraintTop_toTopOf="@+id/btn_1" />


        <Button
            android:id="@+id/btn_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="clickBtn"
            android:text="@string/str_btn_3"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_2"
            app:layout_constraintTop_toTopOf="@+id/btn_2" />


        <Button
            android:id="@+id/btn_0"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:onClick="clickBtn"
            android:text="@string/str_btn_0"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_dot"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_1" />

        <Button
            android:id="@+id/btn_dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="clickBtn"
            android:text="@string/str_btn_dot"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_0"
            app:layout_constraintTop_toTopOf="@+id/btn_0" />


        <Button
            android:id="@+id/btn_div"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="clickBtn"
            android:text="@string/str_btn_div"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/btn_percent" />

        <Button
            android:id="@+id/btn_mul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="clickBtn"
            android:text="@string/str_btn_mul"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/btn_9" />

        <Button
            android:id="@+id/btn_sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="clickBtn"
            android:text="@string/str_btn_sub"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/btn_6" />

        <Button
            android:id="@+id/btn_sum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="clickBtn"
            android:text="@string/str_btn_sum"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/btn_3" />

        <Button
            android:id="@+id/btn_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="clickBtn"
            android:text="@string/str_btn_result"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/btn_dot" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="144dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.72" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.88" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.04" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>